--- a/iframe.html
+++ b/iframe.html
@@ -394,7 +394,7 @@
   }
 </script>
 
-    <script type="module" crossorigin src="./assets/iframe-CMKblS2r.js"></script>
+    <script type="module" crossorigin src="./assets/iframe-CAHVEP0d.js"></script>
   </head>
 
   <body>
